--- a/css/dropdown-menu.css
+++ b/css/dropdown-menu.css
@@ -26,7 +26,7 @@
 .dropdown-menu {
   position: absolute;
   top: 38px;
-  background: #E54;
+  background: #fcc055;
   border: 2px solid #333;
   z-index: 200;
 }
@@ -40,9 +40,16 @@
   height: 0px;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #E54;
+  border-bottom: 10px solid #fcc055;
 }
 
 .dropdown-menu li a:hover {
   color: white;
 }
+
+@media (max-width: 700px) {
+  [data-dropdown] .dropdown-menu {
+    display: block;
+    animation: show-up .3s forwards;
+  }
+  }
